tests/golden/error/private_generic_type_access/helper.tg
// Helper module with a private generic type.

type Secret<T> = T

pub type Public<T> = T
